--- a/package.json
+++ b/package.json
@@ -12,22 +12,25 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "lucide-react": "^0.344.0",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "react-router-dom": "^6.22.0",
+    "@google/genai": "^1.8.0",
     "axios": "^1.6.7",
-    "recharts": "^2.12.0",
-    "framer-motion": "^11.0.6",
-    "react-hot-toast": "^2.4.1",
-    "date-fns": "^3.3.1",
-    "express": "^4.18.2",
-    "jsonwebtoken": "^9.0.2",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
-    "helmet": "^7.1.0",
+    "date-fns": "^3.3.1",
+    "dotenv": "^17.0.1",
+    "express": "^4.18.2",
     "express-rate-limit": "^7.1.5",
+    "framer-motion": "^11.0.6",
+    "helmet": "^7.1.0",
+    "jsonwebtoken": "^9.0.2",
+    "lucide-react": "^0.344.0",
+    "mongoose": "^8.16.1",
     "multer": "^1.4.5-lts.1",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-hot-toast": "^2.4.1",
+    "react-router-dom": "^6.22.0",
+    "recharts": "^2.12.0",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
@@ -36,16 +39,16 @@
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.3.1",
     "autoprefixer": "^10.4.18",
+    "concurrently": "^8.2.2",
     "eslint": "^9.9.1",
     "eslint-plugin-react-hooks": "^5.1.0-rc.0",
     "eslint-plugin-react-refresh": "^0.4.11",
     "globals": "^15.9.0",
+    "nodemon": "^3.0.3",
     "postcss": "^8.4.35",
     "tailwindcss": "^3.4.1",
     "typescript": "^5.5.3",
     "typescript-eslint": "^8.3.0",
-    "vite": "^5.4.2",
-    "concurrently": "^8.2.2",
-    "nodemon": "^3.0.3"
+    "vite": "^5.4.2"
   }
 }
