--- a/package.json
+++ b/package.json
@@ -23,15 +23,20 @@
     "express-rate-limit": "^7.1.5",
     "framer-motion": "^11.0.6",
     "helmet": "^7.1.0",
+    "highlight.js": "^11.11.1",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.344.0",
+    "markdown-it": "^14.1.0",
     "mongoose": "^8.16.1",
     "multer": "^1.4.5-lts.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hot-toast": "^2.4.1",
+    "react-icons": "^5.5.0",
+    "react-markdown": "^10.1.0",
     "react-router-dom": "^6.22.0",
     "recharts": "^2.12.0",
+    "remark-gfm": "^4.0.1",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
