--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "framer-motion": "^11.0.6",
     "helmet": "^7.1.0",
     "highlight.js": "^11.11.1",
+    "html-react-parser": "^5.2.5",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.344.0",
     "markdown-it": "^14.1.0",
